zarf/deployments/mainnet/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dec-party-manager-1
  namespace: catalyst-canton
  labels:
    app.kubernetes.io/name: dec-party-manager
    app.kubernetes.io/instance: participant-1
    app.kubernetes.io/component: coordinator
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: dec-party-manager
      app.kubernetes.io/instance: participant-1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dec-party-manager
        app.kubernetes.io/instance: participant-1
        app.kubernetes.io/component: coordinator
    spec:
      containers:
        - name: dec-party-manager
          image: public.ecr.aws/dlc-link/canton-decparty-manager:v0.0.10
          imagePullPolicy: Always
          command: ["dec-party-manager", "serve"]
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: noise
              containerPort: 9000
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /app
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "2Gi"
              cpu: "500m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: dec-party-manager-1-data
---
apiVersion: v1
kind: Service
metadata:
  name: dec-party-manager-1
  namespace: catalyst-canton
  labels:
    app.kubernetes.io/name: dec-party-manager
    app.kubernetes.io/instance: participant-1
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: noise
      port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app.kubernetes.io/name: dec-party-manager
    app.kubernetes.io/instance: participant-1
---
apiVersion: v1
kind: Service
metadata:
  name: dec-party-manager-1-noise
  namespace: catalyst-canton
  labels:
    app.kubernetes.io/name: dec-party-manager
    app.kubernetes.io/instance: participant-1
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  ports:
    - name: noise
      port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app.kubernetes.io/name: dec-party-manager
    app.kubernetes.io/instance: participant-1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dec-party-manager-1-ingress
  namespace: catalyst-canton
spec:
  ingressClassName: traefik
  rules:
    - host: dec-party-manager-1.main.canton.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dec-party-manager-1
                port:
                  number: 80
